<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigasi_kategori_1"
        android:title="@string/nav_kategori_1">
        <menu>
            <group android:checkableBehavior="all">
                <item
                    android:id="@+id/mnu_nav_beranda"
                    android:checked="false"
                    android:icon="@drawable/ic_dashboard_black_24dp"
                    android:title="@string/nav_view_item_1" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/navigasi_kategori_2"
        android:title="@string/nav_kategori_2">
        <menu>
            <item
                android:id="@+id/mnu_nav_profil"
                android:checked="false"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/nav_view_item_11" />
            <item
                android:id="@+id/mnu_nav_logout"
                android:checked="false"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/nav_view_item_12" />
        </menu>
    </item>
</menu>