<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_users_profile"
    android:background="@color/new_background"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailUsersActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fitsSystemWindows="true" >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_u"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginBottom="32dp"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/img_users"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="center"
                android:src="@drawable/ic_broken_image_gray_24dp"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_u"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways"
                app:layout_collapseMode="pin"
                android:elevation="4dp">

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_alignParentStart="true"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/lay_users_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:layout_margin="10dp"
                android:background="@drawable/textview_layout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/data_diri"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:id="@+id/lay_users_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="45dp"
                    android:paddingBottom="15dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_person_dark_24dp"
                        android:layout_marginRight="20dp"/>

                    <TextView
                        android:id="@+id/txt_users_detail_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="15sp"
                        android:background="@android:color/transparent"
                        android:textColor="@color/gray"
                        android:text="@string/dummy" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/lay_users_email"
                    android:layout_below="@id/lay_users_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_email_gray_24dp"
                        android:layout_marginRight="20dp"/>

                    <TextView
                        android:id="@+id/txt_users_detail_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:textSize="15sp"
                        android:background="@android:color/transparent"
                        android:textColor="@color/gray"
                        android:text="@string/dummy" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/lay_users_phone"
                    android:layout_below="@id/lay_users_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_call_gray_24dp"
                        android:layout_marginRight="20dp"/>

                    <TextView
                        android:id="@+id/txt_users_detail_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:textSize="15sp"
                        android:background="@android:color/transparent"
                        android:textColor="@color/gray"
                        android:text="@string/dummy" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/lay_users_realname"
                    android:layout_below="@id/lay_users_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_info_gray_24dp"
                        android:layout_marginRight="20dp"/>

                    <TextView
                        android:id="@+id/txt_users_detail_realname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:textSize="15sp"
                        android:background="@android:color/transparent"
                        android:textColor="@color/gray"
                        android:text="@string/dummy" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/lay_users_tanggal_lahir"
                    android:layout_below="@id/lay_users_realname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_date_range_gray_24dp"
                        android:layout_marginRight="20dp"/>

                    <TextView
                        android:id="@+id/txt_users_detail_birth_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:textSize="15sp"
                        android:background="@android:color/transparent"
                        android:textColor="@color/gray"
                        android:enabled="false"
                        android:inputType="date"
                        android:maxLines="1"
                        android:text="@string/dummy" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/lay_users_alamat"
                    android:layout_below="@id/lay_users_tanggal_lahir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_place_gray_24dp"
                        android:layout_marginRight="20dp"/>

                    <TextView
                        android:id="@+id/txt_users_detail_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:background="@android:color/transparent"
                        android:text="@string/dummy"
                        android:textColor="@color/gray"
                        android:textSize="15sp" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/lay_users_pendidikan"
                android:layout_below="@id/lay_users_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:layout_margin="10dp"
                android:background="@drawable/textview_layout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/riwayat_pendidikan"
                    android:textStyle="bold"/>

                <ListView
                    android:id="@+id/lst_pendidikans"
                    android:paddingTop="35dp"
                    android:divider="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/lay_users_pekerjaan"
                android:layout_below="@id/lay_users_pendidikan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:layout_margin="10dp"
                android:background="@drawable/textview_layout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/riwayat_pekerjaan"
                    android:textStyle="bold"/>

                <ListView
                    android:id="@+id/lst_pekerjaans"
                    android:paddingTop="35dp"
                    android:divider="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>